syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "ListaChavePixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service ListaChavePixGrpcService {
  rpc listar (ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

message ListaChavePixRequest {
  string clienteId = 1;
}

message ChaveResponse {
  int64 chaveId = 1;
  string clienteId = 2;
  string tipoDaChave = 3;
  string chave = 4;
  string tipoDaConta = 5;
  google.protobuf.Timestamp criadoEm = 6;

}

message ListaChavePixResponse {
  repeated ChaveResponse chaves = 1;
}